# urdf_scene_nicegui

./: Readme.md  license  pyproject.toml  requirements.txt
examples/: three_ax_machine.py
examples/urdf/three_ax_machine/: osaca2.urdf
examples/urdf/three_ax_machine/meshes/: a2.stl
src/urdf_scene_nicegui/: __init__.py  urdf_scene.py
src/urdf_scene_nicegui.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
