[project]
name = "urdf_scene_nicegui"
version = "0.1"
authors=[
    {name = "Christoph Hinze", email = "christoph@hinze.xyz"},
]
description="Load URDF files (with STL meshes) into a NiceGUI scene and animate them"
requires-python=">=3.9"
classifiers=["Development Status :: 1 - Planning",
   "Programming Language :: Python :: 3",
   "Intended Audience :: Manufacturing",
   "Intended Audience :: Science/Research",
   "License :: OSI Approved :: MIT License",]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.black]
line-length = 119

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"